--- a/e-commerce/client/styles.css
+++ b/e-commerce/client/styles.css
@@ -4,13 +4,30 @@
     font-weight: 400;
     src: local('Slims'), url('https://fonts.cdnfonts.com/s/86600/Slims.woff') format('woff');
 }
+
+/* Home */
+.titulo {
+    font-family: 'Slims', sans-serif;
+    font-size: 10em;
+    font-weight: normal;
+    color: #6A903D;
+    text-align: center;
+    text-shadow: 7px 7px 1px #F1C744;
+    cursor: default;
+}
+
 body {
     background-color: black;
-
 }
+
 /*products styles*/
 .card-products-container {
     margin: 5vh auto;
+    cursor: default;
+}
+
+div .card {
+    margin: 3em;
 }
 
 .card-products {
@@ -21,17 +38,19 @@ body {
     flex-wrap: wrap;
     color: #FFFFFF;
     font-family: sans-serif;
+    font-size: x-large;
 }
 
 .card-products h3{
     color: #F1C744;
+    font-size: xx-large;
 }
 
 .card-products img{
     margin-top: 40px;
     width: 250px;
     height: 200px;
-    border-radius: 5em;
+    border-radius: 1em;
     box-shadow: 3px 3px 15px #c6c3c39c;
 }
 
@@ -44,14 +63,16 @@ body {
     text-align: center;
     cursor: pointer;
     width: 100%;
-    font-size: 18px;
+    font-size: 20px;
     border-radius: 1em;
     font-family: sans-serif;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 .card-products button:hover {
-    opacity: 0.7;
+    background-color: white;
+    color: #FF914D;
 }
 
 /*card button*/
@@ -60,18 +81,19 @@ body {
     top: 88vh;
     right: 45px;
     background-color: #92BC3D;
-    padding: 20px;
+    padding: 30px;
     border-radius: 50%;
     height: 24px;
     width: 24px;
     transition: transform 0.2s ease-in-out;
 }
+
 .cart-btn img {
     width: 3em;
     height: 3em;
     position: fixed;
-    top: 88vh;
-    right: 40px;
+    top: 89vh;
+    right: 50px;
     padding: 10px;
 }
 
@@ -93,9 +115,9 @@ body {
     height: 17px;
     width: 17px;
     font-size: 15px;
+    font-family: sans-serif;
 }
 
-/*modal*/
 .modal-overlay {
     display:None;
     background-color: rgba(0, 0, 0, 0.5);
@@ -106,10 +128,11 @@ body {
     bottom: 0;
     z-index: 1;
 }
+
 .modal-container{
     display: none;
     background-color: #F2E394;
-    box-shadow: 0px 3px 6x #00000029;
+    box-shadow: 2px 2px 10px black;
     padding: 40px;
     position: absolute;
     top: 50%;
@@ -128,20 +151,25 @@ body {
 .modal-contaner::-webkit-scrollbar {
     display: none;
 }
+
 .modal-close {
     float: right;
     cursor: pointer;
 }
+
 .modal-title {
     font-size: 24px; 
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
+    text-transform: uppercase;
 }
+
 /*modal body*/
 .modal-body{
     margin-bottom: 20px;
     text-align: center;
+    color: black;
 }
 
 .product{
@@ -187,12 +215,13 @@ body {
 }
 
 .quantity-input{
-    color: #545454;
+    color: black;
     font-size: 16px;
     padding: 10 10px;
     text-align: center;
     width: 50px;
     font-weight: bold;
+    cursor: default;
 }
 
 @media only screen and (max-width: 500px){ /*media query para responsividad*/
@@ -209,7 +238,8 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin-top: 20px;
-    color:#92BC3D;
+    color: #6A903D;
+    cursor: default;
 }
 
 .delete-product{
@@ -218,8 +248,10 @@ body {
     cursor: pointer;
 }
 
+/* Modal footer*/
 .modal-footer{
     text-align: center;
+    margin-top: 5em;
 }
 
 .total-price{
@@ -228,35 +260,28 @@ body {
     margin-top: 20px;
     margin-bottom: 10px;
     color: #6A903D;
+    cursor: default;
 }
 
 .btn-primary {
     background-color: #F26D3D;
     border: none;
     color: #ffffff;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
-    padding: 10px 16px;
+    padding: 10px 35px;
     text-transform: uppercase;
     transition: background-color 0.3s ease;
     cursor: pointer;
-    border-radius: 1em;
+    border-radius: 2em;
 }
 
 .btn-primary:hover {
-    background-color: #FF914D;
+    background-color: white;
+    color: #FF914D;
     border: none;
 }
 
 #button-checkout {
     z-index: 10;
-}
-
-.titulo {
-    font-family: 'Slims', sans-serif;
-    font-size: 10em;
-    font-weight: normal;
-    color: #6A903D;
-    text-align: center;
-    text-shadow: 7px 7px 1px #F1C744;
 }
